fixed drawplain funtction, divs now also align to height

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -6,19 +6,19 @@ body {
 
 
 nav {
-	height: 100%;
-	width: 0;
-	position: absolute;
-	z-index: 1;
-	top: 0;
-	left: 0;
-	background-color:#111;
-	overflow-x: hidden;
-	padding-top: 0px;
+    height: 100%;
+    width: 0;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 0px;
 }
 
-nav a{
-	padding: 6px 8px 6px 16px;
+nav a {
+    padding: 6px 8px 6px 16px;
     text-decoration: none;
     font-size: 17px;
     color: darkgray;
@@ -35,19 +35,19 @@ nav a:hover {
     color: white;
 }
 
-.titleHolder{
-	display: inline-flex;
-	width: 100%;
+.titleHolder {
+    display: inline-flex;
+    width: 100%;
 }
 
-.titleHolder .button{
-	background-color: #111;
-	color: darkgray;
-	cursor: pointer;
-	width: 100%;
-	border: none;
-	outline: none;
-	font-size: 12px;
+.titleHolder .button {
+    background-color: #111;
+    color: darkgray;
+    cursor: pointer;
+    width: 100%;
+    border: none;
+    outline: none;
+    font-size: 12px;
 }
 
 .titleHolder .button:hover {
@@ -55,43 +55,44 @@ nav a:hover {
 }
 
 .drawer {
-	background-color: #555;
-	color: white;
-	cursor: pointer;
-	padding: 18px;
-	width: 100%;
-	border: none;
-	text-align: left;
-	outline: none;
-	font-size: 15px;
+    background-color: #555;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
 }
 
-.active, .drawer:hover {
-	background-color: #777;
+.active,
+.drawer:hover {
+    background-color: #777;
 }
 
 .drawerContent {
-	padding: 0 18px;
-	max-height: 0;
-	overflow: hidden;
-	transition: max-height 0.2s ease-out;
-  background-color: #777;
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: #777;
 }
 
 .drawerButton {
-	background-color: #555;
-	color: white;
-	cursor: pointer;
-	padding: 18px;
-	width: 100%;
-	border: none;
-	text-align: left;
-	outline: none;
-	font-size: 15px;
+    background-color: #555;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
 }
 
 .drawerButton:hover {
-  background-color: #999;
+    background-color: #999;
 }
 
 footer {
@@ -101,12 +102,12 @@ footer {
     display: inline-flex;
 }
 
-main{
+main {
     width: 100%;
     height: 100%;
     overflow: hidden;
-	    display: grid;
-      grid-template-columns: min-content auto min-content;
+    display: grid;
+    grid-template-columns: min-content auto min-content;
     grid-template-rows: min-content auto auto min-content;
     grid-gap: 10px;
     padding: 3px;
@@ -122,38 +123,71 @@ main{
 }
 
 .verticalSlider {
-  -webkit-appearance: none;
-  background: #d3d3d3;
+    -webkit-appearance: none;
+    background: #d3d3d3;
     height: 10%;
     width: 4545%;
-    align-self:center;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
-  transform: rotateZ(-90deg);
-    transform: translateX(-250px,0);
-  overflow:visible;
- position:relative;
-  left: -1800%;
+    align-self: center;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    transform: rotateZ(-90deg);
+    transform: translateX(-250px, 0);
+    overflow: visible;
+    position: relative;
+    left: -1800%;
 }
 
 .verticalSlider:hover {
-  opacity: 1;
+    opacity: 1;
 }
 
 .verticalSlider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 10%;
-  height: 25px;
-  background: #4CAF50;
-  cursor: pointer;
+    -webkit-appearance: none;
+    appearance: none;
+    width: 10%;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
 }
 
 .verticalSlider::-moz-range-thumb {
-  width: 10%;
-  height: 100%;
-  background: #4CAF50;
-  cursor: pointer;
+    width: 10%;
+    height: 100%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+
+#levelContainer {
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    display: inline-table
+}
+
+.row {
+    display: flex;
+    padding: 0;
+}
+
+.tile {
+    width: 100%;
+    margin: 0.2%;
+    float: left;
+    background: rgba(0, 0, 255, 0.3);
+    transform: scale(0.9);
+    padding: 0;
+    margin: 0;
+
+}
+
+.tile:hover {
+    background: rgba(0, 150, 150, 0.3);
+}
+
+.char {
+    width: 100%;
+    height: 100%;
 }
